Colaboratory를 통해 생성됨

--- a/BP_10_EX_Ch10.ipynb
+++ b/BP_10_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbk/rUEk0G7xE7SzeXwsc8",
+      "authorship_tag": "ABX9TyM7hj91AmD5PpLZ5sd2Ioeb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 가위,바위,보 게임을 GUI 버전으로 작성해보자. 사용자의 선택은 왼쪽에 이미지로 표시한다. 컴퓨터의 선택은 오른쪽에 이미지로 표시한다. 사용자는 버튼을 눌러서 가위,바위,보 중에서 하나를 선택할 수 있다. 사용자의 선택이 끝나면 결과를 화면에 텍스트로 표시한다.\n",
         "from random import *\n",
         "from tkinter import *\n",
         "\n",
@@ -327,12 +326,13 @@
         "        if (user_choice == 'paper'):\n",
         "            turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
         "            compare.configure(text=\">>>>>\")\n",
-        "        elif (user_choice='scissors'):\n",
+        "        elif (user_choice == 'scissors'):\n",
         "            turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\")\n",
         "            compare.configure(text=\"<<<<<\")\n",
         "        else:\n",
         "            turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
-        "            compare.configure(text=\"======\")\n",
+        "            compare.configure(text=\"=====\")\n",
+        "\n",
         "    elif (oppo_choice == 'paper'):\n",
         "        oppo_image.configure(image=paper_image)\n",
         "        if (user_choice == 'scissors'):\n",
@@ -345,9 +345,9 @@
         "            turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
         "            compare.configure(text=\"=====\")\n",
         "\n",
-        "    elif (oppo_choice='scissors'):\n",
+        "    elif (oppo_choice == 'scissors'):\n",
         "        oppo_image.configure(image=scissors_image)\n",
-        "        if (user_choice='rock'):\n",
+        "        if (user_choice == 'rock'):\n",
         "            turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
         "            compare.configure(text=\">>>>>\")\n",
         "        elif (user_choice == 'paper'):\n",
@@ -364,19 +364,18 @@
         "                     command=user_choice_rock, activebackground='black', activeforeground='white')\n",
         "paper_button = Button(main_window, width=20, text=\"보\", justify=CENTER,\n",
         "                      command=user_choice_paper, activebackground='black', activeforeground='white')\n",
-        "scissors_button = Button(main_window, width=20, text=\"가위\", justi=CENTER,\n",
+        "scissors_button = Button(main_window, width=20, text=\"가위\", justify=CENTER,\n",
         "                         command=user_choice_scissors, activebackground='black', activeforeground='white')\n",
-        "rock_image = PhotoImage(file=\"C:\\rock.gif\")\n",
-        "paper_image = PhotoImage(file=\"C:\\paper.gif\")\n",
-        "scissors_image = PhotoImage(file=\"C:\\scissors.gif\")\n",
+        "rock_image = PhotoImage(file=\"C:\\주먹.gif\")\n",
+        "paper_image = PhotoImage(file=\"C:\\보.gif\")\n",
+        "scissors_image = PhotoImage(file=\"C:\\가위.gif\")\n",
         "user_image = Label(text=\"사용자\", image=rock_image)\n",
         "user_image.image = rock_image\n",
-        "compare = Label(main_window, justify=CENTER, font(\"Helvetica\", 30))\n",
+        "compare = Label(main_window, justify=CENTER, font=(\"Helvetica\", 30))\n",
         "oppo_image = Label(text=\"컴퓨터\", image=paper_image)\n",
         "oppo_image.image = paper_image\n",
         "turn_result = Label(main_window, width=20, justify=CENTER,\n",
         "                    font=(\"Helvetica\", 20))\n",
-        "\n",
         "# 그리드 생성\n",
         "rock_button.grid(row=5, column=1)\n",
         "paper_button.grid(row=5, column=2)\n",
@@ -385,12 +384,11 @@
         "compare.grid(row=3, column=2)\n",
         "oppo_image.grid(row=3, column=3)\n",
         "turn_result.grid(row=4, column=2)\n",
-        "\n",
         "# GUI화면 루프처리\n",
         "main_window.mainloop()"
       ],
       "metadata": {
-        "id": "gGm4FyW_IVti"
+        "id": "gD9NTvExgzeE"
       },
       "execution_count": null,
       "outputs": []
