Colaboratory를 통해 생성됨

--- a/BP_10_EX_Ch10.ipynb
+++ b/BP_10_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7hj91AmD5PpLZ5sd2Ioeb",
+      "authorship_tag": "ABX9TyM5GiBpMZNeR9SHuJkQWbJM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,22 +38,22 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import Tk, Label, Button\n",
+        "from tkinter import Tk, Label, Button #tkinter에 있는 Tk, Label, Button의 옵션을 사용함\n",
         "\n",
-        "def greet():\n",
-        "  print(\"파이썬에 오신 것을 환영합니다.\")\n",
+        "def greet(): #greet로 함수 선언\n",
+        "  print(\"파이썬에 오신 것을 환영합니다.\") #파이썬에 오신 것을 환영합니다를 출력\n",
         "\n",
-        "window = Tk()\n",
-        "label = Label(window, text=\"간단한 GUI 프로그램!\")\n",
-        "label.pack()\n",
+        "window = Tk() #tkinter를 실행\n",
+        "label = Label(window, text=\"간단한 GUI 프로그램!\") #간단한 GUI 프로그램!이라는 텍스트를 만듦\n",
+        "label.pack() #레이블 위젯을 표시\n",
         "\n",
-        "greet_button = Button(window, text=\"환영합니다.\", command=greet)\n",
-        "greet_button.pack()\n",
+        "greet_button = Button(window, text=\"환영합니다.\", command=greet) #환영합니다가 있는 버튼을 생성\n",
+        "greet_button.pack() #환영합니다 버튼(위젯)을 표시\n",
         "\n",
-        "close_button = Button(window, text=\"종료\", command=window.quit)\n",
-        "close_button.pack()\n",
+        "close_button = Button(window, text=\"종료\", command=window.quit) #종료 버튼 생성\n",
+        "close_button.pack() #종료 버튼(위젯) 표시\n",
         "\n",
-        "window.mainloop()"
+        "window.mainloop() #윈도우 내에서 이벤트 발생"
       ],
       "metadata": {
         "id": "iKdeRz3F-ns0"
@@ -73,20 +73,20 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import Tk, Label, Button, Entry, IntVar, END, W, E\n",
+        "from tkinter import Tk, Label, Button, Entry, IntVar, END, W, E #tkinter에 있는 Tk, Label, Button, Entry, Invar, END, W, E의 기능을 사용하겠다\n",
         "\n",
-        "def update_add():\n",
-        "  update(\"add\")\n",
+        "def update_add(): #update_add 함수 선언\n",
+        "  update(\"add\") \n",
         "\n",
-        "def update_subtract():\n",
+        "def update_subtract(): #update_subtract 함수 선언\n",
         "  update(\"subtract\")\n",
         "\n",
-        "def update_reset():\n",
+        "def update_reset(): #update_reset 함수 선언\n",
         "  update(\"reset\")\n",
         "\n",
-        "window = Tk()\n",
-        "total = 0\n",
-        "sum - Label(window)\n",
+        "window = Tk() #tkinter를 실행\n",
+        "total = 0 #total 값을 0으로 초기화\n",
+        "sum = Label(window) #\n",
         "sum.grid(row=0, column=1, columnspan=2)\n",
         "\n",
         "label = Label(window, text=\"현재 합계:\")\n",
