--- a/BP_10_EX_Ch10.ipynb
+++ b/BP_10_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5GiBpMZNeR9SHuJkQWbJM",
+      "authorship_tag": "ABX9TyOQTWdOCd2YvM1jan40bqh/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,40 +87,40 @@
         "window = Tk() #tkinter를 실행\n",
         "total = 0 #total 값을 0으로 초기화\n",
         "sum = Label(window) #\n",
-        "sum.grid(row=0, column=1, columnspan=2)\n",
+        "sum.grid(row=0, column=1, columnspan=2) #0행 1열\n",
         "\n",
-        "label = Label(window, text=\"현재 합계:\")\n",
-        "label.grid(row=0, column=0)\n",
-        "\n",
-        "entry = Entry(window)\n",
-        "entry.grid(row=1, column=0, columspan=3)\n",
-        "\n",
-        "add_button = Button(window, text=\"현재 합계:\")\n",
-        "label.grid(row=0, column=0)\n",
+        "label = Label(window, text=\"현재 합계:\") #현재 합계 란란이 뜨도록 생성\n",
+        "label.grid(row=0, column=0) #0행 0열에 배치\n",
         "\n",
         "entry = Entry(window)\n",
-        "entry.grid(row=1, column=0, columnspan=3)\n",
+        "entry.grid(row=1, column=0, columspan=3) #1행 0열\n",
         "\n",
-        "add_button = Button(window, text=\"더하기(+)\",command=update_add)\n",
-        "subtract_button = Button(window, text=\"빼기(-)\", command=update_subtract)\n",
-        "reset_button = Button(window, text=\"초기화\", command=update_reset)\n",
+        "add_button = Button(window, text=\"현재 합계:\") #현재 합계가 나타나도록 생성\n",
+        "label.grid(row=0, column=0) #0행 0열에 배치\n",
         "\n",
-        "add_button.grid(row=2, column=0)\n",
-        "subtract_button.grid(row=2, column=1)\n",
-        "reset_button.grid(row=2, column=2)\n",
+        "entry = Entry(window) #입력칸 생성\n",
+        "entry.grid(row=1, column=0, columnspan=3) #1행 0열에 배치\n",
         "\n",
-        "def update(method):\n",
+        "add_button = Button(window, text=\"더하기(+)\",command=update_add) #버튼을 클릭하면 plus 함수 실행\n",
+        "subtract_button = Button(window, text=\"빼기(-)\", command=update_subtract) #버튼을 클릭하면 subtract 함수 실행\n",
+        "reset_button = Button(window, text=\"초기화\", command=update_reset) #버튼을 클릭하면 reset 함수 실행\n",
+        "\n",
+        "add_button.grid(row=2, column=0) #더하기 버튼을 2행 0열에 배치\n",
+        "subtract_button.grid(row=2, column=1) #빼기 버튼을 2행 1열에 배치\n",
+        "reset_button.grid(row=2, column=2) #초기화 버튼을 2행 2열애 배치\n",
+        "\n",
+        "def update(method): #update 함수 선언언\n",
         "  global total\n",
-        "  if method == \"add\":\n",
-        "    total += int(entry.get())\n",
-        "  elif method == \"subtract\":\n",
+        "  if method == \"add\": #method가 add와 같다면\n",
+        "    total += int(entry.get()) \n",
+        "  elif method == \"subtract\": #method가 subtract와 같다면\n",
         "    total -= int(entry.get())\n",
         "  else:\n",
         "    total = 0\n",
         "    sum['text'] = str(total)\n",
         "    entry.delete(0, END)\n",
         "\n",
-        "window.mainloop()"
+        "window.mainloop() #윈도우 내에서 이벤트 발생생"
       ],
       "metadata": {
         "id": "rml6l09W_TOI"
@@ -140,27 +140,27 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
-        "from tkinter import *\n",
+        "import random #random 라이브러리 불러오기\n",
+        "from tkinter import * #tkinter에 있는 기능들 불러오기\n",
         "\n",
-        "window = Tk()\n",
-        "secret_number = random.randint(1,100)\n",
+        "window = Tk() #tkinter 생성\n",
+        "secret_number = random.randint(1,100) #1에서 100까지의 수를 랜덤으로 정함\n",
         "guess = None\n",
         "num_guesses = 0\n",
         "\n",
-        "def guess_number():\n",
+        "def guess_number(): #guess_number 함수 선언\n",
         "  global num_guesses\n",
         "  guess = int(entry.get())\n",
         "  num_guesses += 1\n",
-        "  if guess == secret_number:\n",
-        "    message = \"축하합니다!!\"\n",
-        "  elif guess < secret_number:\n",
-        "    message = \"너무 낮아요!!\"\n",
-        "  else:\n",
-        "    message = \"너무 높아요!!\"\n",
+        "  if guess == secret_number: #guess와 secret_number가 같다면\n",
+        "    message = \"축하합니다!!\" #축하합니다!!가 뜸\n",
+        "  elif guess < secret_number: #guess가 secret_number보다 작으면\n",
+        "    message = \"너무 낮아요!!\" #너무 낮아요!!가 뜸\n",
+        "  else: #그렇지 않으면\n",
+        "    message = \"너무 높아요!!\" #너무 높아요!!가 뜸\n",
         "  label['text']= message\n",
         "\n",
-        "def reset():\n",
+        "def reset(): #reset 함수 선언\n",
         "  global num_guesses\n",
         "  entry.delete(0, END)\n",
         "  secret_number = random.randint(1,100)\n",
@@ -181,7 +181,7 @@
         "guess_button.grid(row=2, column=0)\n",
         "reset_button.grid(row=2, column=1)\n",
         "\n",
-        "window.mainloop()"
+        "window.mainloop() #윈도우 내에서 이벤트 발생"
       ],
       "metadata": {
         "id": "ECcs2mK_BwxA"
@@ -201,9 +201,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import *\n",
+        "from tkinter import * #tkinter에 있는 기능들 불러오기\n",
         "\n",
-        "def do_convert():\n",
+        "def do_convert(): #do_convert 함수 선언\n",
         "  inch_val = float(cvt_from.get())\n",
         "  centimeters_val = inch_val * 2.54\n",
         "  cvt_to.set('%s 센티미터' % centimeters_val)\n",
@@ -244,7 +244,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import *\n",
+        "from tkinter import * #tkinter에 있는 기능들 불러오기\n",
         "fields = '이름', '직업', '국적'\n",
         "\n",
         "def fetch(entries):\n",
@@ -292,26 +292,27 @@
     {
       "cell_type": "code",
       "source": [
-        "from random import *\n",
-        "from tkinter import *\n",
+        "from random import * #random에 있는 기능들 불러오기기\n",
+        "from tkinter import * #tkinter에 있는 기능들 불러오기\n",
+        "\n",
         "\n",
         "# 선택 하는 부분\n",
         "\n",
         "\n",
-        "def user_choice_rock():\n",
-        "    user_choice = \"rock\"\n",
+        "def user_choice_rock(): #user_choice_rock 함수 선언\n",
+        "    user_choice = \"rock\" #변수 user_choice를 rock으로 선언 \n",
         "    turn(user_choice)\n",
         "    user_image.configure(image=rock_image)\n",
         "\n",
         "\n",
-        "def user_choice_paper():\n",
-        "    user_choice = \"paper\"\n",
+        "def user_choice_paper(): #user_choice_paper 함수 선언\n",
+        "    user_choice = \"paper\" #변수 user_choice를 paper로 선언\n",
         "    turn(user_choice)\n",
         "    user_image.configure(image=paper_image)\n",
         "\n",
         "\n",
-        "def user_choice_scissors():\n",
-        "    user_choice = \"scissors\"\n",
+        "def user_choice_scissors(): #user_choice_scissors 함수 선언\n",
+        "    user_choice = \"scissors\" #변수 user_choice를 scissors로 선언언\n",
         "    turn(user_choice)\n",
         "    user_image.configure(image=scissors_image)\n",
         "\n",
@@ -319,16 +320,16 @@
         "\n",
         "\n",
         "def turn(user_choice):\n",
-        "    oppo = ['rock', 'paper', 'scissors']\n",
-        "    oppo_choice = oppo[randint(0, 2)]\n",
-        "    if (oppo_choice == 'rock'):\n",
-        "        oppo_image.configure(image=rock_image)\n",
-        "        if (user_choice == 'paper'):\n",
-        "            turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
-        "            compare.configure(text=\">>>>>\")\n",
-        "        elif (user_choice == 'scissors'):\n",
-        "            turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\")\n",
-        "            compare.configure(text=\"<<<<<\")\n",
+        "    oppo = ['rock', 'paper', 'scissors'] #oppo의 리스트\n",
+        "    oppo_choice = oppo[randint(0, 2)] #리스트 항목을 랜덤으로 선택\n",
+        "    if (oppo_choice == 'rock'): #주먹이라면 \n",
+        "        oppo_image.configure(image=rock_image) #주먹 이미지를 가져온다\n",
+        "        if (user_choice == 'paper'): #사용자가 보를 내면\n",
+        "            turn_result.configure(text=\"사용자 승!\", fg=\"green\") #사용자 승!(초록색)으로 출력\n",
+        "            compare.configure(text=\">>>>>\") #>>>>> 출력\n",
+        "        elif (user_choice == 'scissors'): #사용자가 가위를 내면\n",
+        "            turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\") #컴퓨터 승!(빨간색)으로 출력\n",
+        "            compare.configure(text=\"<<<<<\") #<<<<< 출력\n",
         "        else:\n",
         "            turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
         "            compare.configure(text=\"=====\")\n",
